--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     build: .
     volumes:
       - ./BFBC2_MasterServer:/app/BFBC2_MasterServer
+      - ./easo:/app/easo
     ports:
       - "8000:8000"
     env_file:
