--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./BFBC2_MasterServer:/app/BFBC2_MasterServer
       - ./easo:/app/easo
+      - ./Plasma:/app/Plasma
     ports:
       - "8000:8000"
     env_file:
