--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-POSTGRES_HOST=bfbc2emu-database
+POSTGRES_HOST=database
 POSTGRES_PORT=5432
-REDIS_HOST=bfbc2emu-redis
+REDIS_HOST=redis
 REDIS_PORT=6379
