--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,7 @@ services:
   app:
     build: .
     volumes:
-      - ./BFBC2_MasterServer:/app/BFBC2_MasterServer
-      - ./easo:/app/easo
-      - ./Plasma:/app/Plasma
-      - ./Theater:/app/Theater
+      - .:/app
     ports:
       - "8000:8000"
     env_file:
