--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,5 @@ POSTGRES_HOST=database
 POSTGRES_PORT=5432
 REDIS_HOST=redis
 REDIS_PORT=6379
+ALLOWED_HOSTS=localhost
+SECRET_KEY=django-insecure-t@l1!pjvt+fb!%ptl+#k$%@@#=uciivm11s*#cthon%j!5krmf
