Added Docker healthchecks

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,4 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 ALLOWED_HOSTS=localhost
 SECRET_KEY=django-insecure-t@l1!pjvt+fb!%ptl+#k$%@@#=uciivm11s*#cthon%j!5krmf
+DEBUG=True
