--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"label": "docker-compose-create",
 			"type": "shell",
-			"command": "docker compose up database redis -d",
+			"command": "docker compose -f ${workspaceFolder}/docker-compose.debug.yml up -d",
 		},
 		{
 			"type": "docker-build",
@@ -53,7 +53,7 @@
 		{
 			"type": "shell",
 			"label": "docker-compose-stop",
-			"command": "docker compose stop database redis",
+			"command": "docker compose -f ${workspaceFolder}/docker-compose.debug.yml stop",
 		}
 	]
 }
